# sevenSegment

hardware/: .gitignore  fp-lib-table  max17291ata.kicad_sym  seven_segment-job.gbrjob  seven_segment.kicad_pcb  seven_segment.kicad_prl  seven_segment.kicad_pro  seven_segment.kicad_sch  sym-lib-table
hardware/7761.pretty/: 7761.kicad_sym  7761.step  KEYSTONE_7761.kicad_mod
hardware/PJ_102AH.pretty/: CUI_PJ-102AH.kicad_mod
hardware/TPS22810DBVR.pretty/: DBV0006A_L.kicad_mod  DBV0006A_M.kicad_mod  DBV0006A_N.kicad_mod  TPS22810DBVR.kicad_sym
hardware/TPS22810DBVT.pretty/: SOT95P280X145.kicad_mod  TPS22810DBVT.dcm  TPS22810DBVT.kicad_sym  TPS22810DBVT.lib  TPS22810DBVT.mod
hardware/TPS22810DRVR.pretty/: DRV0006A.kicad_mod  DRV0006A_NV.kicad_mod  TPS22810DRVR.kicad_sym
hardware/analog_devices.pretty/: 21-0168M_T822&plus_3C_MXM-L.kicad_mod  21-0168M_T822&plus_3C_MXM-M.kicad_mod  21-0168M_T822&plus_3C_MXM.kicad_mod
hardware/klauke.pretty/: 2025.kicad_mod  klauke_2025-Body.step  klauke_2025-Body.wrl
hardware/pushbutton.pretty/: 431256083716.kicad_sym  TO_6083716_WRE.kicad_mod
software/: Cargo.toml  Embed.toml  README.md  memory.x
software/.cargo/: config.toml
software/src/: main.rs
