[package]
name = "seven_segment"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z' # Memory is scarce, maximize optimizations
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
embedded-hal = "1.0.0"
nb = "0.1.2"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
panic-halt = "0.2.0"

[dependencies.stm32f0xx-hal]
version = "0.18.0"
features = ["stm32f051"]
